# anx

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
anx/: build.gradle
anx/src/androidTest/java/com/flomobility/anx/: ExampleInstrumentedTest.kt
anx/src/main/: AndroidManifest.xml
anx/src/main/java/com/flomobility/anx/: App.java  EnvUtils.java  ExecService.java  PrefStore.java  UpdateEnvTask.java
anx/src/main/res/values/: themes.xml
anx/src/main/res/values-night/: themes.xml
api_docs/anx/: README.md
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/env/: README.md
app/src/main/cpp/: Android.mk  CMakeLists.txt  ipc_transport.cpp  ipc_transport.h  native-lib.cpp  termux-bootstrap.c  utils.h
app/src/main/cpp/include/ipc/: ipc_transport.h
app/src/main/cpp/src/: ipc_transport.cpp  native-lib.cpp
app/src/main/java/com/flomobility/anx/: FloApplication.kt  (+6 more)
app/src/main/res/drawable/: button_rounded.xml  circle_shape.xml  circular_paused_progress_bar.xml  circular_progress_bar.xml  ic_bluetooth.xml  ic_circle_green.xml  ic_circle_red.xml  ic_error.xml  ic_exit.xml  ic_flo.xml  ic_flo_o.xml  ic_help.xml  ic_imu.xml  ic_mic.xml  ic_pass.xml  ic_phone.xml  ic_pill.xml  ic_speaker.xml  ic_usb_serial.xml  ic_warning.xml  rounded_corners.xml  splash_layer_list.xml  square_rounded_1.xml  square_rounded_2.xml  text_field_background_with_stroke.xml
app/src/main/res/drawable-v23/: splash_layer_list.xml
app/src/main/res/font/: metropolis.xml
app/src/main/res/layout/: activity_asset_debug.xml  activity_dashboard.xml  activity_depth_image.xml  activity_home.xml  activity_license.xml  activity_login.xml  activity_main.xml  activity_settings.xml  activity_settings_anx.xml  activity_splash.xml  activity_terminal.xml  activity_ubuntu_setup.xml  activity_wifi.xml  asset_single_item.xml  ip_single_item.xml  item_spinner_asset.xml  item_spinner_asset_view.xml  preference_markdown_text.xml  sensor_single_item.xml  sensor_status_single_item.xml  view_terminal_toolbar_extra_keys.xml
app/src/main/res/raw/: green_tick.json
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: shortcuts.xml  terminal_api_preferences.xml  terminal_float_preferences.xml  terminal_preferences.xml  terminal_tasker_preferences.xml
app/src/release/: google-services.json
assets/: build.gradle
assets/src/main/: AndroidManifest.xml
common/: .gitignore  build.gradle
common/src/main/: AndroidManifest.xml
common/src/main/cpp/: CMakeLists.txt
common/src/main/cpp/include/: rate.h  utils.h
common/src/main/cpp/include/camera/: camera.h  camera_utils.h
common/src/main/cpp/include/ipc/: ipc_transport.h
common/src/main/cpp/include/sensor/: NdkSensor.h  imu.h
common/src/main/cpp/include/tflite/: tflite_runner.h  tflite_runner_rpc_server.h
common/src/main/cpp/src/: NdkSensor.cpp  camera.cpp  camera_utils.cpp  camerad.cpp  imu.cpp  ipc_transport.cpp  native-lib.cpp  rate.cpp  sensord.cpp  tflite_runner.cpp  tflite_runner_jni.cpp  tflite_runner_rpc_server.cpp  utils.cpp
depth/: build.gradle
depth/src/main/: AndroidManifest.xml
depth/src/main/cpp/: CMakeLists.txt  depth.cpp
depth/src/main/cpp/midas/: midas.cpp  midas.h  opencv-utils.cpp  opencv-utils.h
device/: build.gradle
device/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
libuvccamera/: build.gradle  proguard-rules.pro
libuvccamera/src/main/: AndroidManifest.xml
libuvccamera/src/main/jni/UVCCamera/: Parameters.cpp  UVCPreview.cpp  UVCPreview.h
libuvccamera/src/main/jni/libusb/libusb/: io.c
protoc/: .gitignore  build.gradle
terminal-emulator/: build.gradle
terminal-emulator/src/main/jni/: termux.c
terminal-view/: build.gradle
terminal-view/src/main/: AndroidManifest.xml
termux-app-0.118.0/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
termux-app-0.118.0/app/: build.gradle  proguard-rules.pro
termux-app-0.118.0/app/src/main/: AndroidManifest.xml
termux-app-0.118.0/app/src/main/cpp/: termux-bootstrap.c
termux-app-0.118.0/app/src/main/res/drawable/: button_color.xml  checkbox.xml  flo_mobility_logo.xml  ic_email.xml  ic_flo_logo.xml  ic_gps.xml  ic_launcher_foreground.xml  ic_video.xml
termux-app-0.118.0/app/src/main/res/drawable-v23/: splash_layer_list.xml
termux-app-0.118.0/app/src/main/res/layout/: activity_home.xml  activity_license.xml  activity_login.xml  activity_settings_anx.xml  activity_termux.xml  activity_ubuntu_setup.xml  asset_single_item.xml  sensor_single_item.xml  sensor_status_single_item.xml
termux-app-0.118.0/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
termux-app-0.118.0/app/src/main/res/values/: strings.xml  styles.xml
termux-app-0.118.0/app/src/main/res/xml/: root_preferences.xml  shortcuts.xml  terminal_debugging_preferences.xml  terminal_float_debugging_preferences.xml  terminal_float_preferences.xml  terminal_preferences.xml  terminal_tasker_debugging_preferences.xml  terminal_tasker_preferences.xml  terminal_terminal_io_preferences.xml  terminal_terminal_view_preferences.xml  terminal_widget_preferences.xml  termux_api_preferences.xml  termux_float_preferences.xml  termux_preferences.xml  termux_tasker_preferences.xml  termux_widget_preferences.xml
termux-app-0.118.0/libuvccamera/: build.gradle
termux-app-0.118.0/terminal-emulator/src/main/: AndroidManifest.xml
termux-app-0.118.0/terminal-view/: build.gradle
termux-app-0.118.0/termux-shared/: LICENSE.md  build.gradle
termux-app-0.118.0/termux-shared/src/main/: AndroidManifest.xml
termux-app-0.118.0/termux-shared/src/main/res/raw/: apt_info_script.sh
termux-app-0.118.0/termux-shared/src/main/res/values/: strings.xml  themes.xml
termux-app-0.118.0/usbCameraCommon/: build.gradle  proguard-rules.pro
termux-shared/: build.gradle
termux-shared/src/main/res/values/: strings.xml
termux-shared/src/main/res/values-night/: themes.xml
usbCameraCommon/: build.gradle
(+579 files in other folders)
